--- a/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
@@ -230,7 +230,7 @@
                 android:layout_marginStart="5dp"
                 android:background="@color/black">
 
-                <VideoView
+                <com.example.pc.myapplication.mediaPlayers.VideoPlayer
                     android:id="@+id/miniVideoView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -256,6 +256,17 @@
             </RelativeLayout>
 
             <TextView
+                android:id="@+id/noVideo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/noVideo"
+                android:visibility="gone"/>
+
+            <TextView
                 android:id="@+id/audio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -273,6 +284,8 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginStart="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
                 android:layout_marginTop="8dp"
                 android:orientation="horizontal">
 
@@ -283,7 +296,13 @@
                     android:layout_marginBottom="8dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginStart="5dp"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:onClick="audioClick"
+                    android:ems="8"
+                    android:ellipsize="marquee"
+                    android:maxLines="1"
+                    android:marqueeRepeatLimit ="marquee_forever"
+                    android:layout_gravity="center_vertical"/>
 
                 <ImageView
                     android:id="@+id/headphone"
@@ -294,6 +313,59 @@
                     android:src="@drawable/headphones" />
 
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/noAudio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/noAudio"
+                android:visibility="gone"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:id="@+id/controllerHolder"
+                android:orientation="horizontal"
+                android:onClick="showAudioController">
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/plano"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/plano"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/planoIMG"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:scaleType="centerCrop"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginStart="5dp"/>
+
+            <TextView
+                android:id="@+id/noPlano"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/noPlano"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </ScrollView>
