--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -20,14 +20,14 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Nombre de atracción</label>
                     <div class="col-sm-10">
-                        <input required type="text" ng-model="atraccion.nombre" class="form-control" placeholder="Nombre de la atracción">
+                        <input type="text" ng-model="atraccion.nombre" class="form-control" placeholder="Nombre de la atracción">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Ciudad de la atracción</label>
                     <div class="col-sm-10">
-                        <select class="form-control" required ng-model="atraccion.ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
+                        <select class="form-control" ng-model="atraccion.ciudadSelected" ng-options="ciudad.nombre for ciudad in ciudades">
                         </select>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Descripción de la atracción</label>
                     <div class="col-sm-10">
-                        <textarea required class="form-control" ng-model="atraccion.descripcion" rows="5" style="resize: none;" id="descripcionAtraccion" placeholder="Descripción de la atracción"></textarea>
+                        <textarea class="form-control" ng-model="atraccion.descripcion" rows="5" style="resize: none;" id="descripcionAtraccion" placeholder="Descripción de la atracción"></textarea>
                     </div>
                 </div>
 
@@ -124,7 +124,7 @@
                                     </datalist>
                             </span>
                             -->
-                            <input required step="any" min="0" type="number" ng-model="atraccion.montoCosto" class="form-control" placeholder="Costo de la atracción">
+                            <input type="text" ng-model="atraccion.montoCosto" class="form-control" placeholder="Costo de la atracción">
                         </div>
                     </div>
                 </div>
@@ -132,14 +132,14 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Hora de apertura</label>
                     <div class="col-sm-10">
-                        <input required type="text" class="form-control" ng-model="atraccion.horaApertura">
+                        <input type="text" class="form-control" ng-model="atraccion.horaApertura" placeholder="Formato: HH:MM Rango: 00:00 - 23:59">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Hora de cierre</label>
                     <div class="col-sm-10">
-                        <input required type="text" class="form-control" ng-model="atraccion.horaCierre">
+                        <input type="text" class="form-control" ng-model="atraccion.horaCierre" placeholder="Formato: HH:MM Rango: 00:00 - 23:59">
                     </div>
                 </div>
 
@@ -147,7 +147,7 @@
                     <label class="col-sm-2 col-form-label">Duración promedio</label>
                     <div class="col-sm-10">
                         <div class="input-group">
-                            <input ng-model="atraccion.duracion" required type="number" min="1" class="form-control" placeholder="Duración promedio de la atracción">
+                            <input ng-model="atraccion.duracion" type="text" class="form-control" placeholder="Duración promedio de la atracción">
                             <span class="input-group-addon" id="basic-addon2">minutos</span>
                         </div>
                     </div>
@@ -160,6 +160,11 @@
                         </select>
                     </div>
                 </div>
+
+                <div class="alert alert-danger {{alert.class}}">
+                    {{alert.msg}}
+                </div>
+
 
                 <div class="form-group row">
                     <button type="submit" class="btn btn-primary center-block">{{submitButton}}</button>
