--- a/client/MyApplication/app/src/main/res/layout/activity_busca_atr_cerca.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_busca_atr_cerca.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/buscaAtr"
+    tools:context="com.example.pc.myapplication.BuscaAtrCercaActivity"
+    android:orientation="vertical">
+
+    <include layout="@layout/toolbar" android:id="@+id/include" />
 
     <ListView
         android:id="@+id/atraccList"
@@ -16,4 +21,5 @@
         android:layout_marginEnd="5dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"/>
+
 </LinearLayout>
