--- a/webserver/public/app/ciudades/views/edit.html
+++ b/webserver/public/app/ciudades/views/edit.html
@@ -35,6 +35,9 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Imagen de la ciudad</label>
                 <div class="col-sm-10">
+                    <h4>Información</h4>
+                    <p>El formato de la imagen debe ser png.</p>
+                    <p>El tamaño de la imagen debería ser 1920x1080 para una mejor visualización en la aplicación móvil.</p>
                     <label class="btn btn-primary" for="imagenCiudadInput">
                         <input type="file" id="imagenCiudadInput" accept="image/png"
                                style="display:none;" custom-on-change="updateImageClick">
