--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -49,8 +49,11 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Imágenes</label>
                     <div class="col-sm-10">
+                        <h4>Información</h4>
+                        <p>El formato de la imagen debe ser png.</p>
+                        <p>El tamaño de la imagen debería ser 1920x1080 para una mejor visualización en la aplicación móvil.</p>
                         <label class="btn btn-primary">
-                            <input type="file" custom-on-change="uploadImageClick" style="display:none;" multiple="multiple">
+                            <input type="file" custom-on-change="uploadImageClick" style="display:none;" multiple="multiple" accept="image/png">
                             Subir imagen
                         </label>
 
@@ -67,6 +70,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Videos</label>
                     <div class="col-sm-10">
+
                         <label class="btn btn-primary">
                             <input type="file" custom-on-change="uploadVideoClick" style="display:none;" multiple="multiple">
                             Subir video
