--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -70,9 +70,10 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Videos</label>
                     <div class="col-sm-10">
-
+                        <h4>Información</h4>
+                        <p>El formato del video debe ser mp4.</p>
                         <label class="btn btn-primary">
-                            <input type="file" custom-on-change="uploadVideoClick" style="display:none;" multiple="multiple">
+                            <input type="file" custom-on-change="uploadVideoClick" style="display:none;" multiple="multiple" accept="video/mp4">
                             Subir video
                         </label>
 
