--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -93,8 +93,11 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Audios</label>
                     <div class="col-sm-10">
+                        <h4>Información</h4>
+                        <p>El formato del audio debe ser mp3.</p>
+
                         <label class="btn btn-primary" >
-                            <input type="file" custom-on-change="uploadAudioClick" style="display:none;" multiple="multiple">
+                            <input type="file" custom-on-change="uploadAudioClick" style="display:none;" multiple="multiple" accept="audio/mp3">
                             Subir audio
                         </label>
 
