--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -42,6 +42,7 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Ubicación</label>
                     <div class="col-sm-10">
+                        <input id="pac-input" class="controls" type="text" placeholder="Search Box">
                         <div id="map" style="width: 100%; height: 500px; position: relative; overflow: hidden;">Error al cargar el mapa</div>
                     </div>
                 </div>
