--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -10,7 +10,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfgdw0Y5DIuWpWLF-6vEDORKEh3YgxuCo"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfgdw0Y5DIuWpWLF-6vEDORKEh3YgxuCo&libraries=places"></script>
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
