--- a/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_atraccion.xml
@@ -150,6 +150,16 @@
                     </LinearLayout>
 
                     <TextView
+                        android:id="@+id/moneda"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="8dp"
+                        android:text="@string/moneda" />
+
+                    <TextView
                         android:id="@+id/costo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
