--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -10,6 +10,10 @@
 
     </div>
 
+    <!-- Error header -->
+    <div id="infoContainer">
+    </div>
+
     <div class="panel-custom" ng-show="ciudades.length == 0">
         <h3 class="subheader">No hay ciudades agregadas. Agrega una ciudad primero.</h3>
     </div>
