--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -100,14 +100,22 @@
                     <div class="col-sm-10">
                         <h4>Información</h4>
                         <p>El formato del audio debe ser mp3.</p>
+                        <div class="input-group">
+                            <span>
+                                <select class="form-control" style="width:auto;margin-right:5px" ng-model="atraccion.idiomaSelected"
+                                        ng-options="idioma for idioma in atraccion.idiomas">
+                                </select>
+                            </span>
+                            <label class="btn btn-primary" >
+                                <input type="file" custom-on-change="uploadAudioClick" style="display:none;" multiple="multiple" accept="audio/mp3">
+                                Subir audio
+                            </label>
 
-                        <label class="btn btn-primary" >
-                            <input type="file" custom-on-change="uploadAudioClick" style="display:none;" multiple="multiple" accept="audio/mp3">
-                            Subir audio
-                        </label>
+                        </div>
 
                         <div class="previewDeAudios">
                             <div class="audioPreview" ng-repeat="(id,atraccionAudio) in atraccion.audios">
+                                <span class="label label-info">{{atraccionAudio.idiomaAudio}}</span>
                                 <audio class="media-middle" controls>
                                     <source ng-src="{{atraccionAudio.audSrc}}">
                                     Your browser does not support the audio element.
