--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -71,6 +71,27 @@
                     </div>
                 </div>
 
+                <!-- Plano -->
+                <div class="form-group row">
+                    <label class="col-sm-2 col-form-label">Plano</label>
+                    <div class="col-sm-10">
+                        <h4>Información</h4>
+                        <p>El formato de la imagen debe ser png.</p>
+                        <p>El tamaño de la imagen debería ser 1920x1080 para una mejor visualización en la aplicación móvil.</p>
+                        <label class="btn btn-primary">
+                            <input type="file" custom-on-change="uploadPlanoClick" style="display:none;" multiple="multiple" accept="image/png">
+                            Subir plano
+                        </label>
+
+                        <div class="previewDeImagenes">
+                            <div class="imagenPreview" ng-repeat="(id,atraccionPlano) in atraccion.planos">
+                                <img ng-src="{{atraccionPlano.imgSrc}}" class="img-responsive"/>
+                                <button type='button' class="btn btn-default btn-block" ng-click="deletePlano(id,atraccionPlano)">Borrar plano</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Videos -->
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Videos</label>
