#44 Correciones de ortografia/idioma

--- a/webserver/public/app/ciudades/views/listado.html
+++ b/webserver/public/app/ciudades/views/listado.html
@@ -54,8 +54,8 @@
         </div>
         <div class="panel-footer">
             <div class="btn-group" role="group" aria-label="edit-remove">
-                <a href="#/ciudades/edit/{{ciudad._id}}" class="btn btn-default" role="button">Edit</a>
-                <button type="button" class="btn btn-default" ng-click="deleteCiudad(ciudad._id)">Remove</button>
+                <a href="#/ciudades/edit/{{ciudad._id}}" class="btn btn-default" role="button">Editar</a>
+                <button type="button" class="btn btn-default" ng-click="deleteCiudad(ciudad._id)">Borrar</button>
             </div>
         </div>
     </div>
