--- a/webserver/views/index.ejs
+++ b/webserver/views/index.ejs
@@ -11,7 +11,7 @@
 <body>
 <div class="container">
   <div class="col-sm-6 col-sm-offset-3">
-    <h1><span class="fa fa-sign-in"></span> Login</h1>
+    <h1><span class="fa fa-sign-in"></span> Ingreso al sistema</h1>
 
     <% if (message.length > 0) { %>
     <div class="alert alert-danger"><%= message %></div>
@@ -19,15 +19,15 @@
 
     <form action="/" method="post">
       <div class="form-group">
-        <label>Username</label>
+        <label>Usuario</label>
         <input type="text" class="form-control" name="username">
       </div>
       <div class="form-group">
-        <label>Password</label>
+        <label>Contraseña</label>
         <input type="password" class="form-control" name="password">
       </div>
 
-      <button type="submit" class="btn btn-warning btn-lg">Login</button>
+      <button type="submit" class="btn btn-warning btn-lg">Ingresar</button>
     </form>
 
   </div>
