--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -53,8 +53,8 @@
         </div>
         <div class="panel-footer">
             <div class="btn-group" role="group" aria-label="edit-remove">
-                <a href="#/atracciones/edit/{{atraccion._id}}" class="btn btn-default" role="button">Edit</a>
-                <button type="button" class="btn btn-default" ng-click="deleteAtraccion(atraccion._id)">Remove</button>
+                <a href="#/atracciones/edit/{{atraccion._id}}" class="btn btn-default" role="button">Editar</a>
+                <button type="button" class="btn btn-default" ng-click="deleteAtraccion(atraccion._id)">Borrar</button>
             </div>
         </div>
     </div>
