--- a/webserver/public/stylesheets/style-menu.css
+++ b/webserver/public/stylesheets/style-menu.css
@@ -152,3 +152,14 @@ code {
     width: 50%;
     z-index: 9999;
 }
+
+.titulo {
+    display:inline-block;
+    margin-top:-2%;
+    float:left;
+}
+
+.titulo-select {
+    margin-left:5px;
+    display:inline-block;
+}
