--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -1,20 +1,34 @@
 <!-- Begin page content -->
 <div class="container">
     <div class='page-header'>
-        <div class='btn-toolbar pull-right'>
-            <div class='btn-group'>
-                <a href="#/atracciones" class="btn btn-primary" role="button">Volver al listado de atracciones</a>
+        <div class="row row-eq-height">
+            <div class="col-sm-4">
+                <div class="row row-eq-height">
+                    <div class="col-sm-10">
+                        <h1>{{title}}</h1>
+                    </div>
+                    <div class="col-sm-2">
+                        <div class="dropdown button-wrapper">
+                            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">es
+                                <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li class="dropdown-header">Idiomas cargados</li>
+                                <li><a href="#">es</a></li>
+                                <li><a href="#">en</a></li>
+                                <li class="dropdown-header">Idiomas no cargados</li>
+                                <li><a href="#">jp</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="titulo">
-            <h1>{{title}}</h1>
-        </div>
-        <div class="titulo-select">
-                <span>
-                <select class="form-control" style="width:auto;margin-right:5px" ng-model="atraccion.idiomaSelected"
-                        ng-options="idioma for idioma in atraccion.idiomas">
-                </select>
-            </span>
+            <div class="col-sm-4">
+            </div>
+            <div class="col-sm-4">
+                <div class="button-wrapper">
+                    <a href="#/atracciones" class="btn btn-primary pull-right" role="button">Volver al listado de atracciones</a>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -24,6 +38,10 @@
 
     <div class="panel-custom" ng-show="ciudades.length == 0">
         <h3 class="subheader">No hay ciudades agregadas. Agrega una ciudad primero.</h3>
+    </div>
+
+    <div ng-show="ciudades.length > 0">
+        <label class="col-form-label"> Idioma seleccionado</label>
     </div>
 
     <div class="panel panel-default" ng-show="ciudades.length > 0">
