--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -43,9 +43,10 @@
                         </div>
                     </div>
                     <div class="row">
-                        <label class="col-sm-2 col-form-label">Descripción</label>
+                        <label class="col-sm-2 col-form-label">Idiomas</label>
                         <div class="col-sm-10">
-                            {{atraccion.descripcion}}
+                            <span class="label label-info" style="min-width: 30px; display: inline-block;">es</span>
+                            <span class="label label-info" style="min-width: 30px; display: inline-block;">en</span>
                         </div>
                     </div>
                 </div>
