#57 Evitar agregar ciudad repetida

--- a/webserver/public/app/ciudades/views/edit.html
+++ b/webserver/public/app/ciudades/views/edit.html
@@ -8,6 +8,11 @@
 
 </div>
 
+<!-- Error header -->
+<div id="errorContainer">
+
+</div>
+
 <div class="panel panel-default">
     <div class="panel-body">
         <form ng-submit="submitEditCiudad()">
