--- a/client/MyApplication/app/src/main/res/menu/activity_main_drawer.xml
+++ b/client/MyApplication/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,6 +27,10 @@
             android:icon="@drawable/ic_build_black_24dp"
             android:title="@string/config"/>
         <item
+            android:id="@+id/link"
+            android:icon="@drawable/link"
+            android:title="@string/add_social"/>
+        <item
             android:id="@+id/logout"
             android:icon="@drawable/logout"
             android:title="@string/logout"/>
