#109 Internacionalización para Agregar ciudad OK.

--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -17,8 +17,10 @@
 
     <script type="text/javascript" src="app/tripsApp.js"></script>
     <script type="text/javascript" src="app/controllers.js"></script>
+    <script type="text/javascript" src="app/common/services/IdiomaService.js"></script>
     <script type="text/javascript" src="app/ciudades/module.js"></script>
     <script type="text/javascript" src="app/ciudades/controllers.js"></script>
+    <script type="text/javascript" src="app/ciudades/services/CiudadService.js"></script>
     <script type="text/javascript" src="app/atracciones/module.js"></script>
     <script type="text/javascript" src="app/atracciones/controllers.js"></script>
 </head>
