--- a/webserver/public/app/ciudades/views/add.html
+++ b/webserver/public/app/ciudades/views/add.html
@@ -1,11 +1,24 @@
 <div class='page-header'>
-    <div class='btn-toolbar pull-right'>
-        <div class='btn-group'>
-            <a href="#/ciudades" class="btn btn-primary" role="button">Volver al listado de ciudades</a>
+    <div class="row row-eq-height">
+        <div class="col-sm-8">
+            <div style="float:left;">
+                <h1>Agregar ciudad</h1>
+            </div>
+            <div style="float:left;" class="select-wrapper">
+                <select class="form-control" style="width:120px;"
+                        ng-model="idiomaFormulario"
+                        ng-options="idioma as (idioma.nombre + '' + getIndicativo(idioma)) group by getStatusIdioma(idioma) for idioma in ciudad.idiomas">
+                </select>
+            </div>
+        </div>
+        <div class="col-sm-4">
+            <div class='btn-toolbar pull-right button-wrapper'>
+                <div class='btn-group'>
+                    <a href="#/ciudades" class="btn btn-primary" role="button">Volver al listado de ciudades</a>
+                </div>
+            </div>
         </div>
     </div>
-    <h1>Agregar ciudad</h1>
-
 </div>
 
 <div class="panel panel-default">
@@ -28,7 +41,9 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Descripción de la ciudad</label>
                 <div class="col-sm-10">
-                    <textarea class="form-control" ng-model="ciudad.descripcion" rows="5" style="resize: none;" id="descripcionCiudad" placeholder="Descripción de la ciudad"></textarea>
+                    <textarea class="form-control" ng-model="ciudad.descripcion[idiomaFormulario.code]" rows="5" style="resize: none;" id="descripcionCiudad" placeholder="Descripción de la ciudad"
+                              ng-change="updateDescripcion()">
+                    </textarea>
                 </div>
             </div>
 
@@ -65,7 +80,7 @@
                             <div class="row">
                                 <label class="col-sm-2 col-form-label">Descripción</label>
                                 <div class="col-sm-10">
-                                    {{ciudad.descripcion}}
+                                    {{ciudad.descripcion[idiomaFormulario.code]}}
                                 </div>
                             </div>
                         </div>
