--- a/webserver/public/app/atracciones/views/listado.html
+++ b/webserver/public/app/atracciones/views/listado.html
@@ -45,8 +45,7 @@
                     <div class="row">
                         <label class="col-sm-2 col-form-label">Idiomas</label>
                         <div class="col-sm-10">
-                            <span class="label label-info" style="min-width: 30px; display: inline-block;">es</span>
-                            <span class="label label-info" style="min-width: 30px; display: inline-block;">en</span>
+                            <span class="label label-info" style="margin-right:3px;" ng-repeat="idioma in atraccion.idiomasCargados">{{idioma.nombre}}</span>
                         </div>
                     </div>
                 </div>
