--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -23,6 +23,9 @@
     <script type="text/javascript" src="app/ciudades/services/CiudadService.js"></script>
     <script type="text/javascript" src="app/atracciones/module.js"></script>
     <script type="text/javascript" src="app/atracciones/controllers.js"></script>
+    <script type="text/javascript" src="app/resenias/module.js"></script>
+    <script type="text/javascript" src="app/resenias/controllers/reseniasController.js"></script>
+    <script type="text/javascript" src="app/resenias/services/HelperResenias.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
