--- a/client/MyApplication/app/src/main/res/layout/activity_login.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_login.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:id="@+id/relLogin"
+    android:orientation="vertical"
+    android:visibility="gone"
     tools:context="com.example.pc.myapplication.LoginActivity"
     >
 
     <com.twitter.sdk.android.core.identity.TwitterLoginButton
         android:id="@+id/twitter_login_button"
-        android:layout_width="215dp"
+        android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_marginBottom="8dp"
-        android:layout_above="@+id/login_button"
-        android:layout_centerHorizontal="true" />
+
+        android:layout_margin="8dp"
+       />
 
 
     <com.facebook.login.widget.LoginButton
         android:id="@+id/login_button"
-        android:layout_width="215dp"
-        android:layout_height="35dp"
-        android:layout_alignLeft="@+id/twitter_login_button"
-        android:layout_alignStart="@+id/twitter_login_button"
-        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:layout_margin="8dp"
         android:layout_gravity="center" />
 
     <Button
         android:id="@+id/tryIt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_button"
+        android:onClick="tryIt"
         android:layout_margin="8dp"
-        android:layout_centerHorizontal="true"
-        android:text="@string/probar" />
+        android:text="@string/probar"
+        android:textAllCaps="false"
+        android:textSize="12sp" />
 
-</RelativeLayout>
+</LinearLayout>
