--- a/client/MyApplication/app/src/main/res/layout/comentarios_tab.xml
+++ b/client/MyApplication/app/src/main/res/layout/comentarios_tab.xml
@@ -8,8 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10dp"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"
         android:layout_marginLeft="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginRight="5dp"
@@ -20,7 +20,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/commentLN">
 
         <EditText
             android:id="@+id/editText2"
