--- a/webserver/public/app/resenias/views/listado.html
+++ b/webserver/public/app/resenias/views/listado.html
@@ -83,7 +83,7 @@
                     <td>{{getDescripcion(id,resultado)}}</td>
                     <td>
                         <div class="btn-group" role="group" aria-label="edit-remove">
-                            <button type="button" class="btn btn-default btn-block" ng-click="bloquearUsuario(id, resultado)">Bloquear usuario</button>
+                            <button type="button" class="btn btn-default btn-block" ng-click="bloquearDesbloquearUsuario(id, resultado)">{{getMensajeBotonBloqueo(id, resultado)}}</button>
                             <button type="button" class="btn btn-default btn-block" ng-click="borrarResenia(id,resultado)">Borrar reseña</button>
                         </div>
                     </td>
