--- a/client/MyApplication/app/src/main/res/drawable/rectangulo.xml
+++ b/client/MyApplication/app/src/main/res/drawable/rectangulo.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:endColor="@color/colorPrimary"
-        android:centerColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimary"
+        android:endColor="@color/colorAccent"
+        android:centerColor="@color/colorAccent"
+        android:startColor="@color/colorAccent"
         android:angle="270" />
     <corners
         android:radius="50dp" />
     <padding
-        android:left="10dp"
-        android:top="10dp"
-        android:right="10dp"
-        android:bottom="10dp" />
+        android:left="8dp"
+        android:top="8dp"
+        android:right="8dp"
+        android:bottom="8dp" />
 </shape>
