--- a/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
+++ b/client/MyApplication/app/src/main/res/layout/atraccion_item.xml
@@ -29,4 +29,13 @@
         android:textColor="@color/white"
         android:textSize="36sp"
         android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/starFav"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:scaleType="centerCrop"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
