--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -26,6 +26,10 @@
     <script type="text/javascript" src="app/resenias/module.js"></script>
     <script type="text/javascript" src="app/resenias/controllers/reseniasController.js"></script>
     <script type="text/javascript" src="app/resenias/services/HelperResenias.js"></script>
+    <script type="text/javascript" src="app/recorridos/module.js"></script>
+    <script type="text/javascript" src="app/recorridos/controllers/recorridoFormController.js"></script>
+    <script type="text/javascript" src="app/recorridos/controllers/recorridoListadoController.js"></script>
+    <script type="text/javascript" src="app/recorridos/services/RecorridosService.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
