--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -14,6 +14,8 @@
 
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
     <script type="text/javascript" src="app/tripsApp.js"></script>
     <script type="text/javascript" src="app/controllers.js"></script>
