#164 Agregado de filtro. Falta funcionalidad de la api para completarlo.

--- a/webserver/public/app/resenias/views/listado.html
+++ b/webserver/public/app/resenias/views/listado.html
@@ -15,7 +15,7 @@
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-btn search-panel">
-                            <select class="form-control" style="width:160px;"
+                            <select class="form-control" style="width:auto;"
                                     ng-model="filtroSelected"
                                     ng-options="filtro as (filtro.descripcion) for filtro in opcionesDeFiltro">
                             </select>
