#158 Algo de codigo para el formulario de push.

--- a/webserver/public/app/push/views/form.html
+++ b/webserver/public/app/push/views/form.html
@@ -27,7 +27,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Identificador del push</label>
                 <div class="col-sm-10">
-                    <input type="text" ng-model="push.identificador" class="form-control" placeholder="Identificador del push">
+                    <input type="text" ng-model="push.nombre" class="form-control" placeholder="Identificador del push">
                 </div>
             </div>
 
