--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -35,6 +35,7 @@
     <script type="text/javascript" src="app/push/module.js"></script>
     <script type="text/javascript" src="app/push/controllers/pushFormController.js"></script>
     <script type="text/javascript" src="app/push/controllers/pushListadoController.js"></script>
+    <script type="text/javascript" src="app/push/services/PushService.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
