--- a/webserver/public/app/recorridos/views/form.html
+++ b/webserver/public/app/recorridos/views/form.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="col-sm-10">
-                    <textarea class="form-control"  rows="5" style="resize: none;" placeholder="Descripción del push"
+                    <textarea class="form-control"  rows="5" style="resize: none;" placeholder="Descripción del recorrido"
                               ng-model="recorrido.descripcion[idiomaSelected.code]"
                     ></textarea>
                 </div>
