--- a/client/MyApplication/app/src/main/res/layout/activity_favaoritos_atracciones.xml
+++ b/client/MyApplication/app/src/main/res/layout/activity_favaoritos_atracciones.xml
@@ -7,6 +7,9 @@
     android:orientation="vertical"
     tools:context="com.example.pc.myapplication.FavoritosAtraccionesActivity">
 
+    <include layout="@layout/toolbar"
+        android:id="@+id/include" />
+
     <ListView
         android:id="@+id/favAtr"
         android:layout_width="match_parent"
