--- a/client/MyApplication/app/src/main/res/layout/ciudad_recorridos_tab.xml
+++ b/client/MyApplication/app/src/main/res/layout/ciudad_recorridos_tab.xml
@@ -9,6 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="10dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
