#157 #158 integracion con backend.

--- a/webserver/public/app/push/views/form.html
+++ b/webserver/public/app/push/views/form.html
@@ -64,7 +64,7 @@
             <div class="form-group row">
                 <label class="col-sm-2 col-form-label">Fecha de publicación</label>
                 <div class="col-sm-10">
-                    <input type="datetime-local" ng-model="push.fecha">
+                    <input type="datetime-local" ng-model="push.fechahora">
                 </div>
             </div>
 
