#157 #158 integracion con backend.

--- a/webserver/public/app/push/views/listado.html
+++ b/webserver/public/app/push/views/listado.html
@@ -65,7 +65,7 @@
             </div>
             <div class="btn-group" role="group" aria-label="edit-remove">
                 <a href="#/push/edit/{{push._id}}" class="btn btn-default" role="button">Editar</a>
-                <button type="button" class="btn btn-default" ng-click="borrarPush(push)">Borrar</button>
+                <button type="button" class="btn btn-default" ng-click="deletePush(push)">Borrar</button>
             </div>
         </div>
     </div>
