Fix de un link.

--- a/webserver/public/app/push/views/form.html
+++ b/webserver/public/app/push/views/form.html
@@ -6,7 +6,7 @@
         <div class="col-sm-4">
             <div class='btn-toolbar pull-right button-wrapper'>
                 <div class='btn-group'>
-                    <a href="#/ciudades" class="btn btn-primary" role="button">Volver al listado de pushes</a>
+                    <a href="#/push" class="btn btn-primary" role="button">Volver al listado de pushes</a>
                 </div>
             </div>
         </div>
