#181 Filtrado de recorridos agregado.

--- a/webserver/public/app/push/views/listado.html
+++ b/webserver/public/app/push/views/listado.html
@@ -8,6 +8,14 @@
         <h1>Listado de pushes</h1>
     </div>
 
+    <!-- Error header -->
+    <div id="errorContainer">
+
+    </div>
+    <div id="infoContainer">
+
+    </div>
+
     <div class="panel panel-default">
         <div class="panel-body">
             <form class="buscadorPushes">
