--- a/webserver/public/app/recorridos/views/listado.html
+++ b/webserver/public/app/recorridos/views/listado.html
@@ -9,6 +9,14 @@
 
     </div>
 
+    <!-- Error header -->
+    <div id="errorContainer">
+
+    </div>
+    <div id="infoContainer">
+
+    </div>
+
     <div class="panel panel-default">
         <div class="panel-heading">Filtros</div>
         <div class="panel-body">
