--- a/client/MyApplication/app/src/main/res/layout/publicidad.xml
+++ b/client/MyApplication/app/src/main/res/layout/publicidad.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="5dp"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textSize="36sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <ImageView
@@ -23,14 +23,16 @@
 
     <TextView
         android:id="@+id/link"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:textSize="15sp"/>
 
     <TextView
         android:id="@+id/infoText"
@@ -41,7 +43,8 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        android:textSize="15sp" />
 
 
 
