--- a/webserver/views/menu.ejs
+++ b/webserver/views/menu.ejs
@@ -36,6 +36,9 @@
     <script type="text/javascript" src="app/push/controllers/pushFormController.js"></script>
     <script type="text/javascript" src="app/push/controllers/pushListadoController.js"></script>
     <script type="text/javascript" src="app/push/services/PushService.js"></script>
+    <script type="text/javascript" src="app/puntos/module.js"></script>
+    <script type="text/javascript" src="app/puntos/controllers/ModalPuntos.js"></script>
+    <script type="text/javascript" src="app/puntos/services/PuntosService.js"></script>
 </head>
 <body ng-app="tripsApp" ng-controller="tripsAppController">
 
