--- a/webserver/public/app/atracciones/views/add.html
+++ b/webserver/public/app/atracciones/views/add.html
@@ -33,7 +33,7 @@
 
     <div class="panel panel-default" ng-show="ciudades.length > 0">
         <div class="panel-body">
-            <form ng-submit="submitAtraccion()">
+            <form>
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Nombre de atracción</label>
                     <div class="col-sm-10">
@@ -101,6 +101,30 @@
                             <div class="imagenPreview" ng-repeat="(id,atraccionPlano) in atraccion.planos">
                                 <img ng-src="{{atraccionPlano.imgSrc}}" class="img-responsive"/>
                                 <button type='button' class="btn btn-default btn-block" ng-click="deletePlano(id,atraccionPlano)">Borrar plano</button>
+                            </div>
+                        </div>
+
+                        <div ng-show="atraccion.planos.length >0" style="margin-top:1%">
+                            <div ng-controller="ModalPuntos">
+                                <button type="button" class="btn btn-default" ng-click="agregarPunto(atraccion)">Agregar punto de interes</button>
+                                <ul class="list-group" style="margin-top:1%">
+                                    <li class="list-group-item clearfix" ng-repeat="(id,punto) in atraccion.ids_puntos">
+                                        {{punto.nombre}}
+                                        <span class="pull-right">
+                                            <span class="btn btn-xs btn-default" ng-click="editarPunto(atraccion,punto)">Editar</span>
+
+                                            <span class="btn btn-xs btn-default" ng-click="listadoMoveUp(id)">
+                                                <span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span>
+                                            </span>
+                                            <span class="btn btn-xs btn-default" ng-click="listadoMoveDown(id)">
+                                                <span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span>
+                                            </span>
+                                            <span class="btn btn-xs btn-default" ng-click="listadoRemove(id,punto)">
+                                                <span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span>
+                                            </span>
+                                        </span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -218,7 +242,7 @@
 
 
                 <div class="form-group row">
-                    <button type="submit" class="btn btn-primary center-block">{{submitButton}}</button>
+                    <button type="button" ng-click="submitAtraccion()" class="btn btn-primary center-block">{{submitButton}}</button>
                 </div>
             </form>
 
